@@ -325,11 +325,7 @@ maildirwatch
 qail
 elq
 pinq
-idedit.o
-idedit
-install-big.o
 install.o
-install-big
 hier.o
 install
 instcheck.o
